force-app/main/default/objects/ArticleNews__c/ArticleNews__c.object-meta.xml
<CustomObject>
    <label>News</label>
    <nameField>
        <label>News</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>