force-app/main/default/objects/ArticleNews__c/fields/An__c.field-meta.xml
<CustomField>
    <fullName>An__c</fullName>
    <label>An</label>
    <length>32</length>
    <type>Text</type>
</CustomField>