force-app/main/default/objects/ArticleNews__c/fields/High_Prob_Clients__c.field-meta.xml
<CustomField>
    <fullName>High_Prob_Clients__c</fullName>
    <label>High Prob Clients</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>