force-app/main/default/objects/ArticleNews__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>Index</label>
    <length>20</length>
    <type>Text</type>
</CustomField>