force-app/main/default/objects/ArticleNews__c/fields/Is_china_africa__c.field-meta.xml
<CustomField>
    <fullName>Is_china_africa__c</fullName>
    <label>Is china africa</label>
    <length>2</length>
    <type>Text</type>
</CustomField>