force-app/main/default/objects/ArticleNews__c/fields/Is_top_100__c.field-meta.xml
<CustomField>
    <fullName>Is_top_100__c</fullName>
    <label>Is top 100</label>
    <length>2</length>
    <type>Text</type>
</CustomField>