force-app/main/default/objects/ArticleNews__c/fields/Medium_Prob_Clients__c.field-meta.xml
<CustomField>
    <fullName>Medium_Prob_Clients__c</fullName>
    <label>Medium_Prob_Clients</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>