force-app/main/default/objects/ArticleNews__c/fields/Pred__c.field-meta.xml
<CustomField>
    <fullName>Pred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this article may (prediction) be a lead or not</description>
    <label>Pred</label>
    <type>Checkbox</type>
</CustomField>