force-app/main/default/objects/ArticleNews__c/fields/Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Date__c</fullName>
    <label>Publication Date</label>
    <length>32</length>
    <type>Text</type>
</CustomField>