force-app/main/default/objects/ArticleNews__c/fields/Publisher_Name__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Name__c</fullName>
    <label>Publisher_Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>