force-app/main/default/objects/ArticleNews__c/fields/Sb_Group_Sectors__c.field-meta.xml
<CustomField>
    <fullName>Sb_Group_Sectors__c</fullName>
    <label>Group Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>